feat: add menu e atualizações

--- a/templates/listar_consultas.html
+++ b/templates/listar_consultas.html
@@ -22,8 +22,8 @@
                 {% for c in consultas %}
                 <tr>
                     <td>{{ c['id'] }}</td>
-                    <td>{{ c['id_paciente'] }}</td>
-                    <td>{{ c['id_profissional'] }}</td>
+                    <td>{{ c['paciente_nome'] }}</td>
+                    <td>{{ c['profissional_nome'] }}</td>
                     <td>{{ c['data_hora'] }}</td>
 
                     <td>
