--- a/templates/pacientes/editar.html
+++ b/templates/pacientes/editar.html
@@ -1,17 +1,43 @@
 {% extends "base.html" %}
 {% block content %}
+
 <h2 class="mb-4 fw-semibold">Editar Paciente</h2>
 
-<div class="card shadow-sm">
+<div class="card card-ubs">
   <div class="card-body">
     <form method="POST" class="row g-3">
-      <input type="hidden" name="id" value="{{ paciente['id'] }}">
-      <div class="col-md-6"><label class="form-label">Nome Completo</label><input type="text" name="nome_completo" value="{{ paciente['nome_completo'] }}" class="form-control" required></div>
-      <div class="col-md-6"><label class="form-label">CPF</label><input type="text" name="cpf" value="{{ paciente['cpf'] }}" class="form-control" required></div>
-      <div class="col-md-6"><label class="form-label">Data de Nascimento</label><input type="date" name="data_nascimento" value="{{ paciente['data_nascimento'] }}" class="form-control"></div>
-      <div class="col-md-6"><label class="form-label">Telefone</label><input type="text" name="telefone" value="{{ paciente['telefone'] }}" class="form-control"></div>
-      <div class="col-12 mt-3"><button class="btn btn-primary" type="submit">Atualizar</button><a href="/pacientes" class="btn btn-secondary ms-2">Cancelar</a></div>
+
+      <div class="col-md-6">
+        <label class="form-label">Nome completo</label>
+        <input type="text" name="nome_completo" class="form-control" value="{{ paciente[1] }}" required>
+      </div>
+
+      <div class="col-md-6">
+        <label class="form-label">CPF</label>
+        <input type="text" name="cpf" class="form-control" value="{{ paciente[2] }}" required>
+      </div>
+
+      <div class="col-md-6">
+        <label class="form-label">Data de nascimento</label>
+        <input type="date" name="data_nascimento" class="form-control" value="{{ paciente[3] }}">
+      </div>
+
+      <div class="col-md-6">
+        <label class="form-label">Telefone</label>
+        <input type="text" name="telefone" class="form-control" value="{{ paciente[4] }}">
+      </div>
+
+      <div class="col-12 mt-3">
+        <button class="btn btn-ubs-primary" type="submit">
+             Salvar alterações
+        </button>
+        <a href="{{ url_for('listar_pacientes') }}" class="btn btn-secondary ms-2">
+          Cancelar
+        </a>
+      </div>
+
     </form>
   </div>
 </div>
+
 {% endblock %}
