--- a/templates/profissionais/criar.html
+++ b/templates/profissionais/criar.html
@@ -1,15 +1,38 @@
 {% extends "base.html" %}
 {% block content %}
+
 <h2 class="mb-4 fw-semibold">Novo Profissional</h2>
 
-<div class="card shadow-sm">
+<div class="card card-ubs">
   <div class="card-body">
     <form method="POST" class="row g-3">
-      <div class="col-md-6"><label class="form-label">Nome Completo</label><input type="text" name="nome_completo" class="form-control" required></div>
-      <div class="col-md-6"><label class="form-label">CRM</label><input type="text" name="crm" class="form-control" required></div>
-      <div class="col-md-6"><label class="form-label">Especialidade</label><input type="text" name="especialidade" class="form-control"></div>
-      <div class="col-12 mt-3"><button class="btn btn-primary" type="submit">Salvar</button><a href="/profissionais" class="btn btn-secondary ms-2">Cancelar</a></div>
+
+      <div class="col-md-6">
+        <label class="form-label">Nome completo</label>
+        <input type="text" name="nome_completo" class="form-control" required>
+      </div>
+
+      <div class="col-md-3">
+        <label class="form-label">CRM</label>
+        <input type="text" name="crm" class="form-control" required>
+      </div>
+
+      <div class="col-md-3">
+        <label class="form-label">Especialidade</label>
+        <input type="text" name="especialidade" class="form-control" required>
+      </div>
+
+      <div class="col-12 mt-3">
+        <button class="btn btn-ubs-primary" type="submit">
+           Salvar
+        </button>
+        <a href="{{ url_for('listar_profissionais') }}" class="btn btn-secondary ms-2">
+          Cancelar
+        </a>
+      </div>
+
     </form>
   </div>
 </div>
+
 {% endblock %}
